// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: inline-block;
  color: #111B2B;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-1 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

<div
  class="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    class="SelectField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="optionSelect"
    >
      Label
    </label>
  </div>
  <div
    class="Select__wrapper Select--full"
  >
    <select
      aria-label="optionSelect"
      class="Select"
      data-test-id="cf-ui-select"
      id="optionSelect"
      name="optionSelect"
    >
      <option
        data-test-id="cf-ui-select-option"
        value="optionOne"
      >
        Option 1
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="Select__icon emotion-1"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
      />
    </svg>
  </div>
</div>
`;

exports[`renders the component as disabled 1`] = `
.emotion-0 {
  display: inline-block;
  color: #111B2B;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-1 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

<div
  class="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    class="SelectField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="optionSelect"
    >
      Label
    </label>
  </div>
  <div
    class="Select__wrapper Select--full"
  >
    <select
      aria-label="optionSelect"
      class="Select Select--disabled"
      data-test-id="cf-ui-select"
      disabled=""
      id="optionSelect"
      name="optionSelect"
    >
      <option
        data-test-id="cf-ui-select-option"
        value="optionOne"
      >
        Option 1
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="Select__icon emotion-1"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
      />
    </svg>
  </div>
</div>
`;

exports[`renders the component as required 1`] = `
.emotion-0 {
  display: inline-block;
  color: #111B2B;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-1 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

<div
  class="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    class="SelectField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="optionSelect"
    >
      Label
    </label>
  </div>
  <div
    class="Select__wrapper Select--full"
  >
    <select
      aria-label="optionSelect"
      class="Select"
      data-test-id="cf-ui-select"
      id="optionSelect"
      name="optionSelect"
    >
      <option
        data-test-id="cf-ui-select-option"
        value="optionOne"
      >
        Option 1
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="Select__icon emotion-1"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
      />
    </svg>
  </div>
</div>
`;

exports[`renders the component with a help text 1`] = `
.emotion-0 {
  display: inline-block;
  color: #111B2B;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-1 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

.emotion-3 {
  margin-top: 0.5rem;
}

.emotion-2 {
  margin: 0;
  padding: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 400;
  color: #67728A;
  font-size: 0.875rem;
  line-height: 1.5;
}

<div
  class="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    class="SelectField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="optionSelect"
    >
      Label
    </label>
  </div>
  <div
    class="Select__wrapper Select--full"
  >
    <select
      aria-label="optionSelect"
      class="Select"
      data-test-id="cf-ui-select"
      id="optionSelect"
      name="optionSelect"
    >
      <option
        data-test-id="cf-ui-select-option"
        value="optionOne"
      >
        Option 1
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="Select__icon emotion-1"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
      />
    </svg>
  </div>
  <div
    class="emotion-3"
  >
    <p
      class="emotion-2"
      data-test-id="cf-ui-help-text"
    >
      please select an option
    </p>
  </div>
</div>
`;

exports[`renders the component with a validation message 1`] = `
.emotion-0 {
  display: inline-block;
  color: #111B2B;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-1 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

.emotion-6 {
  margin-top: 0.5rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin-right: 0.25rem;
}

.emotion-2 {
  display: inline-block;
  fill: #DA294A;
  height: 18px;
  width: 18px;
}

.emotion-4 {
  margin: 0;
  padding: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 400;
  color: #DA294A;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<div
  class="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    class="SelectField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="optionSelect"
    >
      Label
    </label>
  </div>
  <div
    class="Select__wrapper Select--full"
  >
    <select
      aria-label="optionSelect"
      class="Select Select--negative"
      data-test-id="cf-ui-select"
      id="optionSelect"
      name="optionSelect"
    >
      <option
        data-test-id="cf-ui-select-option"
        value="optionOne"
      >
        Option 1
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="Select__icon emotion-1"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
      />
    </svg>
  </div>
  <div
    class="emotion-6"
  >
    <div
      class="emotion-5"
      data-test-id="cf-ui-validation-message"
    >
      <div
        class="emotion-3"
      >
        <svg
          aria-label="Validation message"
          class="emotion-2"
          data-test-id="cf-ui-icon"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
      </div>
      <p
        class="emotion-4"
      >
        not valid
      </p>
    </div>
  </div>
</div>
`;

exports[`renders the component with a value 1`] = `
.emotion-0 {
  display: inline-block;
  color: #111B2B;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-1 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

<div
  class="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    class="SelectField__label-wrapper"
  >
    <label
      class="emotion-0"
      data-test-id="cf-ui-form-label"
      for="optionSelect"
    >
      Label
    </label>
  </div>
  <div
    class="Select__wrapper Select--full"
  >
    <select
      aria-label="optionSelect"
      class="Select"
      data-test-id="cf-ui-select"
      id="optionSelect"
      name="optionSelect"
    >
      <option
        data-test-id="cf-ui-select-option"
        value="optionOne"
      >
        Option 1
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="Select__icon emotion-1"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
      />
    </svg>
  </div>
</div>
`;
